Updated "corner-logo" height css to prevent resizing gaps

--- a/grubtrak/src/Home.css
+++ b/grubtrak/src/Home.css
@@ -43,7 +43,7 @@
 
 .corner-logo {
   position: fixed;
-  height: 120px;
+  height: 300px;
   width: 200px;
   top: 0px;
   left: 0px;
